Project

General

Profile

Actions

Bug #43084

closed

std:random_shuffle is depricated in C++17

Added by Willem Jan Withagen over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

see:
https://en.cppreference.com/w/cpp/algorithm/random_shuffle

And this fails on FreeBSD/Clang/stdlibc++

/home/jenkins/workspace/ceph-master/src/tools/osdmaptool.cc:437:5: error: use of undeclared identifier 'random_shuffle'
random_shuffle (rules.begin(), rules.end());
^
1 error generated.
gmake2: * [src/tools/CMakeFiles/osdmaptool.dir/build.make:63: src/tools/CMakeFiles/osdmaptool.dir/osdmaptool.cc.o] Error 1
gmake2: Leaving directory '/home/jenkins/workspace/ceph-master/build'
gmake1: *
[CMakeFiles/Makefile2:5960: src/tools/CMakeFiles/osdmaptool.dir/all] Error 2


Related issues 1 (0 open1 closed)

Related to RADOS - Bug #42718: Improve OSDMap::calc_pg_upmaps() efficiencyResolvedDavid Zafman

Actions
Actions #1

Updated by Willem Jan Withagen over 4 years ago

  • Pull request ID set to 31935
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID changed from 31935 to 31944
Actions #3

Updated by Nathan Cutler over 4 years ago

Note: backporting being handled via #42718 because this is a follow-on fix for https://github.com/ceph/ceph/pull/31774/commits/b946308f03f1798915fafe7878f34b4a234c2ae4 which was part of that fix.

Actions #4

Updated by Nathan Cutler over 4 years ago

  • Related to Bug #42718: Improve OSDMap::calc_pg_upmaps() efficiency added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions #6

Updated by David Zafman over 4 years ago

  • Status changed from Resolved to In Progress
  • Assignee set to David Zafman
  • Backport set to luminous, mimic, nautilus
Actions #7

Updated by David Zafman over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID changed from 31944 to 31990
Actions #8

Updated by David Zafman over 4 years ago

  • Backport deleted (luminous, mimic, nautilus)

This will be back ported with 42718 so it doesn't need entry in "Backport" field.

Actions #9

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF