tools: Use boost random_shuffle vs. std::random_shuffle

Fixes: b946308f03f1798915fafe7878f34b4a234c2ae4
Fixes: https://tracker.ceph.com/issues/43084
Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>